Possible fix to ideas list gret bg not stretching but I never saw it not working

--- a/static-src/scss/components/_ideas.scss
+++ b/static-src/scss/components/_ideas.scss
@@ -39,6 +39,7 @@
 }
 
 .ideas-list {
+    @include rem(padding, 15px);
     clear: both;
 }
 
